# projectJarvis

./: .gitignore  .pdr.md  CONTRIBUTING.md  DECISIONS.md  NOTES.md  OPERATING_PROTOCOL.md  README.md  TASKS.md  pyproject.toml
.claude/agents/: core-engineer.md  local-ml-engineer.md  qa-tuning.md  sensing-engineer.md  voice-integration-engineer.md
docs/: reference-guide.md
docs/agents/: .placeholder.md  README.md  core-engineer.md  local-ml-engineer.md  qa-tuning.md  sensing-engineer.md  voice-integration-engineer.md
docs/architecture/: README.md  latency-budget.md  module-map.md  phase3-invariants.md  working-notes.md
docs/audio/: README.md  asr-spike.md  live-smoke.md  working-notes.md
docs/ml/: README.md  interjection-prior-art.md  qwen-coexistence-spike.md  slm-backend.md  wall-detector-v1-limits.md  working-notes.md
docs/prd/: 01-conversation-initiation.md  02-jarvis-v0-mvp.md  README.md
docs/qa/: README.md  capture-and-label.md  eval-plan.md  threshold-tuning.md  working-notes.md
docs/qa/fixtures/: ff-backoff-no-nag.json  ff-below-floor.json  ff-false-stale-pending-wall.json  ff-false-thinking-pause.json  ff-false-wrong-category.json  ff-useful-unanswered-question.json  seed-false-what-do-you-need.json  seed-summon-excluded.json  seed-useful-factual-gap.json
docs/voice/: README.md  response-contract.md  working-notes.md
prototypes/attention-layer/: README.md  attention_layer.py  requirements.txt
scripts/: latency_budget_harness.py
src/jarvis/: __init__.py  __main__.py  attention_layer.py  clock.py  demo.py  live.py  types.py
src/jarvis/adapters/: __init__.py  backends.py  claude_responder.py  elevenlabs_voice.py  engaged.py  transcript_source.py  voice_session.py
src/jarvis/audio/: __init__.py  mic.py  mic_source.py  source.py  vad.py
src/jarvis/core/: __init__.py  living_summary.py  rolling_window.py  summon_controller.py  text.py  topic_shift.py  turn_taking_gate.py  wall_detector.py
src/jarvis/eval/: __init__.py  capture.py  fixture.py  label.py  runner.py  seed.py
src/jarvis/ml/: __init__.py  qwen.py  summarizer.py  wall.py
tests/: clock.py  conftest.py  fakes.py  test_attention_layer.py  test_audio_source.py  test_claude_responder.py  test_cli.py  test_elevenlabs_voice.py  test_harness.py  test_living_summary.py  test_mic_source.py  test_one_clock_invariant.py  test_qwen_summarizer.py  test_qwen_wall_backend.py  test_rolling_window.py  test_smoke.py  test_summon_controller.py  test_t501_always_on.py  test_t502_capture_eval.py  test_t503_precision_tuning.py  test_t505_asr_quality.py  test_t506_pre_roll.py  test_t507_antifrag_endpointing.py  test_tick_continuous_path_b.py  test_topic_shift.py  test_turn_taking_gate.py  test_vad.py  test_voice_session.py  test_wall_detector.py
