[project]
name = "jarvis"
version = "0.0.0"
description = "Local, always-on desktop assistant — the attention-layer core (ambient half)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "project-jarvis" }]
# Runtime deps are added per-phase behind interfaces (anthropic, elevenlabs,
# silero-vad, mlx, etc.). Phase 0 is pure-logic + mocks and has none.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

# --- uv: dependency groups (preferred workflow) -----------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

# --- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

# --- ruff (lint + format) ----------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"
# `prototypes/` is reference code, not the package — it is ported deliberately
# into `src/jarvis/` (T-002+), so the linter does not govern it.
extend-exclude = ["prototypes"]

[tool.ruff.lint]
# A pragmatic-but-strict baseline: pyflakes (F), pycodestyle (E/W), isort (I),
# pep8-naming (N), pyupgrade (UP), bugbear (B), comprehensions (C4), simplify (SIM).
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and fixture-style names freely.
"tests/**" = ["N802", "N803"]
