[project]
name = "jarvis"
version = "0.0.0"
description = "Local, always-on desktop assistant — the attention-layer core (ambient half)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "project-jarvis" }]
# Runtime deps for the always-on ambient half. `sounddevice` (capture, T-102),
# `silero-vad`+`numpy` (VAD, T-103), `mlx-whisper` (ASR, T-104), `mlx-lm`
# (Qwen2.5-3B SLM backend, T-202) — all shipped runtime behind their seams.
# The cloud deps (anthropic, elevenlabs) arrive in Phase 4 behind interfaces.
dependencies = [
    "anthropic>=0.109.2",
    "elevenlabs>=2.53.0",
    "mlx-lm>=0.31.3",
    "mlx-whisper>=0.4.3",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

# --- uv: dependency groups (preferred workflow) -----------------------------
[dependency-groups]
# The T-101 ASR spike harness. `mlx-whisper` was promoted to real deps in T-104
# (it's the shipped ASR runtime now); `pywhispercpp` stays here as the documented
# fallback / benchmark dep only — it is not a shipped runtime dependency.
asr-spike = [
    "pywhispercpp>=1.5.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
slm-spike = [
    "mlx-lm>=0.31.3",
]

# --- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

# --- ruff (lint + format) ----------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"
# `prototypes/` is reference code, not the package — it is ported deliberately
# into `src/jarvis/` (T-002+), so the linter does not govern it.
extend-exclude = ["prototypes"]

[tool.ruff.lint]
# A pragmatic-but-strict baseline: pyflakes (F), pycodestyle (E/W), isort (I),
# pep8-naming (N), pyupgrade (UP), bugbear (B), comprehensions (C4), simplify (SIM).
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and fixture-style names freely.
"tests/**" = ["N802", "N803"]
